# DashMyBoard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.de.md  CODE_OF_CONDUCT.md  CONTRIBUTING.de.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  SECURITY.de.md  SECURITY.md  TODO.md  compose.example.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
app/: Dockerfile  links.default.json  main.py  mockups.py
app/static/: admin.js  backdrop.js  c22-demo.css  frames.js  style.css  theme.js  ui.js
app/templates/: _macros.html  base.html  demo.html  demo_hw.html  frames.html  home.html  landing.html  news.html  page.html  status.html
backlog/: ADR-1-abbild-statt-paket.md  ADR-2-eine-instanz-je-mandant.md  ADR-3-ordner-sind-keine-seiten.md  M-1-durchstich-multi-site.md  README.md  T-1-screenshots-in-docs.md  T-2-e2e-gegen-echten-idp.md  T-3-abbild-signatur.md
dashmyboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: configuration.de.md  configuration.md  development.de.md  development.md  pages.de.md  pages.md
i18n/: CODE_OF_CONDUCT.de.md  CONTRIBUTING.de.md  README.de.md  SECURITY.de.md
i18n/docs/: configuration.de.md  development.de.md  pages.de.md
scripts/: check.sh
tests/: _fakeauth.py  _harness.py  run_all.py  test_browser.py  test_cookies.py  test_data.py  test_repo.py
